fix(footer): add missing margin before section

--- a/style.css
+++ b/style.css
@@ -1609,6 +1609,7 @@ body {
 }
 
 .footer-contact {
+    margin-top: 80px;
     padding-left: 120px;
 }
 
